--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -109,7 +109,7 @@
   "homePage": {
     "sale_title": "Open Mystery Box",
     "sale_sub_title": "Get 12 zodiac signs",
-    "sale_price_title": "Blind Box Price",
+    "sale_price_title": "Mystery Box Price",
     "buy": "Buy "
   },
   "accountPage": {
